0302 done for the day

--- a/mml_surv.ipynb
+++ b/mml_surv.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## try torchinfo"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -170,6 +179,7 @@
     "    return shuffleSplit.split(x,eventVars)\n",
     "\n",
     "def disk_graph_load(batch):\n",
+    "    # takes list of patient codes, returns list of graph Data objects\n",
     "    return [torch.load(directory + '/' + graph + '.g') for graph in batch]\n",
     "\n",
     "def get_predictions(model,graphs,features = 'BRCA-CC',device=torch.device('cuda:0')) -> list:\n",
@@ -555,7 +565,7 @@
     "            ).to(device)\n",
     "        \n",
     "        self.omic_net = MaxNet(\n",
-    "            input_dim=95, \n",
+    "            input_dim=OMICS_SIZE, \n",
     "            omic_dim=32, \n",
     "            #^output dim; i.e. transform input 95 to output 32\n",
     "            dropout_rate=0.25, \n",
